Introduce user additional info endpoint and developer role.
