# openapi.yml
@@ -92,18 +92,6 @@ paths:
                 $ref: '#/components/schemas/GetUserResponse'
 
   /api/v1/user/locale:
-    get:
-      tags:
-        - user
-      summary: Get current user's locale (from JWT)
-      operationId: getUserLocale
-      responses:
-        '200':
-          description: Current user locale
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserLocaleResponse'
     put:
       tags:
         - user
@@ -116,12 +104,22 @@ paths:
             schema:
               $ref: '#/components/schemas/UpdateUserLocaleRequest'
       responses:
+        '204':
+          description: Locale updated successfully
+
+  /api/v1/user/additional-info:
+    get:
+      tags:
+        - user
+      summary: Get additional user info (from JWT)
+      operationId: getUserAdditionalInfo
+      responses:
         '200':
-          description: Current user locale
+          description: Additional user info
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserLocaleResponse'
+                $ref: '#/components/schemas/UserAdditionalInfoResponse'
 
   /api/v1/user/leaderboard/{type}:
     post:
@@ -448,16 +446,15 @@ components:
       required:
         - user
 
-    UserLocaleResponse:
+    UserAdditionalInfoResponse:
       type: object
       properties:
         locale:
-          type: string
-        isManual:
-          type: boolean
-      required:
-        - locale
-        - isManual
+          $ref: '#/components/schemas/UserLocale'
+        roles:
+          type: array
+          items:
+            $ref: '#/components/schemas/UserRole'
 
     GetPlayerTopicsResponse:
       type: object
@@ -559,7 +556,7 @@ components:
     # --- Enums ---
     UserRole:
       type: string
-      enum: [ USER, ADMIN ]
+      enum: [ USER, ADMIN, DEVELOPER, MANAGER ]
 
     TaskRarity:
       type: string
@@ -623,6 +620,17 @@ components:
         - REFRESH
 
     # --- Domain Objects ---
+    UserLocale:
+      type: object
+      properties:
+        locale:
+          type: string
+        isManual:
+          type: boolean
+      required:
+        - locale
+        - isManual
+
     Task:
       type: object
       properties:
@@ -988,16 +996,12 @@ components:
           type: string
         locale:
           type: string
-        roles:
-          type: array
-          items:
-            $ref: '#/components/schemas/UserRole'
         player:
           $ref: '#/components/schemas/Player'
       required:
         - id
         - version
-        - roles
+        - firstName
         - player
 
     LeaderboardUser:
